src/styles/LandingPage.module.css
.container {
    width: 100%;
    height: 100vh;
    background-image: url("/images/Pattern.jpg");
    background-position: center;
    background-size: cover;
    display: flex;
    align-items: flex-end;

}

.content {
    display: flex;
    width: 100%;
    justify-content: center;
    color: white;
    
}

.logo {
    position: absolute;
    top: 40px;
    left: 40px;   
}

.man {
    width: 700px;
    height: auto;

}

.welcomeContainer {
    width: 700px;
    display: flex;
    flex-direction: column;
    gap: 20px;
    justify-content: start;

}

.welcomeText {
    font-weight: 400;
    font-size: 64px;
    line-height: 87px;
    width: 90%;
}

.wisdom {
    color: #EF4E25;
    line-height: 51px;
    font-size: 37px;
    font-weight: 400;
}

.location, .quote {
    font-size: 24px;
    line-height: 32px;
    font-weight: 400;
}


.start {
    display: flex;
    background-color: #EF4E25;
    width: 240px;
    height: 71px;
    justify-content: space-between;
    padding: 9px 20px;
    align-items: center;
    border-radius: 13px;
    margin-left: 27%;
    font-size: 31px;
    line-height: 43px;
    font-weight: 400;
    cursor: pointer;
    box-shadow: 0px 4px 4px 0px #00000040;
    margin-top: 15px;

}

@media (max-width: 1200px) {
    .container {
        display: flex;
        flex-direction: column;

    }

    .content {
        display: flex;
        flex-direction: column;
        width: 100%;
        justify-content: center;
    }

    .logo {
        position: absolute;
        width: 170px;
        height: auto;
        top: 35px;
        left: 35px;

    }

    .man {
        width: 500px;
        height: auto;
        margin: 0 auto;
        margin-top: 60px;

    }

    .welcomeContainer {
        justify-content: center;
        text-align: center;
        max-width: 70%;
        margin: 0 auto;
        margin-top: 20px;
    }

    .welcomeText {
        margin: 0 auto;
        font-size: 32px;
        line-height: 44px;
        font-weight: 600;
    }

    .wisdom {
        font-size: 22px;
        line-height: 30px;
        font-weight: 700;
    }

    .quote, .location {
        font-weight: 600;
        font-size: 14px;
        line-height: 19px;
        color: #FFFFFF78;

    }

    .start {
        margin: 0 auto;
        font-size: 20px;
        line-height: 27px;
        font-weight: 700;
        width: 150px;
        height: 50px;
        padding: 5px 11px;
    }

    .start img {
        width: 14px;
    }
}

